# gemini-image-mcp

./: .env.example  Dockerfile  LICENSE  README.md  pyproject.toml  smithery.yaml
src/gemini_image_mcp/: __init__.py  prompts.py  server.py  utils.py
